--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: assembly
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Simulate community assembly
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Emilio Berti
+Maintainer: Emilio Berti <emilio.berti.academia@gmail.com>
+Description: Simulate community assembly using three procedures: random,
+    resource filtering, and limiting similarity filtering.
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Depends: 
-    R (>= 2.10)
+    R (>= 2.10),
+    igraph
 Suggests: 
     rmarkdown,
     knitr
