--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,7 @@
 exportPattern("^[[:alpha:]]+")
+importFrom("grDevices", "adjustcolor")
+importFrom("graphics", "grid", "image")
+importFrom("stats", "runif")
+importFrom("igraph", "graph_from_adjacency_matrix")
+importFrom("igraph", "components")
+importFrom("igraph", "similarity")
