--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,8 @@
 exportPattern("^[[:alpha:]]+")
 importFrom("grDevices", "adjustcolor")
-importFrom("graphics", "grid", "image")
+importFrom("graphics", "grid", "image", "par")
 importFrom("stats", "runif")
 importFrom("igraph", "graph_from_adjacency_matrix")
 importFrom("igraph", "components")
 importFrom("igraph", "similarity")
+importFrom("igraph", "V", "V<-")
