--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,8 @@ Depends:
     igraph
 Suggests: 
     rmarkdown,
-    knitr
+    knitr,
+    testthat (>= 3.0.0),
+    covr
 VignetteBuilder: knitr
+Config/testthat/edition: 3
