add choice mean/sum for similarity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ importFrom("stats", "runif")
 importFrom("igraph", "graph_from_adjacency_matrix")
 importFrom("igraph", "components")
 importFrom("igraph", "similarity")
+importFrom("igraph", "as.undirected", "cluster_fast_greedy")
 importFrom("igraph", "V", "V<-")
