--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,13 @@
 Package: assembly
 Type: Package
 Title: Simulate community assembly
-Version: 0.1.2
-Author: Emilio Berti
-Maintainer: Emilio Berti <emilio.berti.academia@gmail.com>
+Version: 0.1.3
+Authors@R: 
+    c(
+    person(given = "Emilio", family = "Berti", email = "emilio.berti.academia@gmail.com",
+           role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9286-011X")),
+    person(given = "Angelos", family = "Amyntas", role = c("aut"))
+    )
 Description: Simulate community assembly using three procedures: random,
     resource filtering, and limiting similarity filtering.
 License: MIT + file LICENSE
