--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Depends: 
-    R (>= 2.10),
+    R (>= 2.10)
+Imports:
     igraph
 Suggests: 
     rmarkdown,
