--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,15 +13,18 @@ Description: Simulate community assembly using three procedures: random,
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.0
 Depends: 
     R (>= 2.10)
 Imports:
-    igraph
+    igraph,
+    Rcpp
 Suggests: 
     rmarkdown,
     knitr,
-    testthat (>= 3.0.0),
-    covr
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+LinkingTo: 
+    Rcpp,
+    RcppArmadillo
