--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,6 @@
+useDynLib(assembly, .registration = TRUE)
+importFrom(Rcpp, evalCpp)
+
 exportPattern("^[[:alpha:]]+")
 importFrom("grDevices", "adjustcolor")
 importFrom("graphics", "grid", "image", "par")
