add output.verbose option to limiting similarity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,10 @@ importFrom(Rcpp, evalCpp)
 exportPattern("^[[:alpha:]]+")
 importFrom("grDevices", "adjustcolor")
 importFrom("graphics", "grid", "image", "par")
-importFrom("stats", "runif")
+importFrom("stats", "runif", "sd", "var")
 importFrom("igraph", "graph_from_adjacency_matrix")
 importFrom("igraph", "components")
 importFrom("igraph", "similarity")
-importFrom("igraph", "as.undirected", "cluster_fast_greedy")
+importFrom("igraph", "as.undirected", "membership", "cluster_fast_greedy")
 importFrom("igraph", "V", "V<-")
+importFrom("igraph", "graph.motifs", "modularity", "average.path.length", "transitivity")
